# Harvester

./: .env.example  .gitignore  AGENTS.md  DESIGN.md  README.md  TODOS.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  start.sh
.agent/skills/: animal-island-ui.md
alembic/: env.py
alembic/versions/: 484b2c3f36a4_add_harvester_control_plane_schema.py  6564f253b5f5_add_category_to_crawl_targets.py  a96be82a295e_add_search_indexes.py  b3c7f1d8a2e4_add_observation_unique_key_and_last_seen.py  c4d8e2f9b3a5_add_job_source_id_and_lane.py  d5a1b2c3e4f6_add_watch_schedules_table.py  e6f7a8b9c0d1_add_crawl_targets_table.py  f7a8b9c0d1e2_change_chunk_embedding_dimension.py
docs/designs/: README.md  office-hours-harvester-20260508-201322.md
frontend/: .gitignore  .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
frontend/e2e/: admin-console.spec.ts  audit-log.spec.ts  content-library.spec.ts  global-teardown.ts  operations-observability.spec.ts  recipe-management.spec.ts  schedule-management.spec.ts  source-management.spec.ts
frontend/src/: App.tsx  index.css  main.tsx
harvester/: __init__.py
harvester/adapters/: __init__.py  binary_fetch.py  embedding_settings.py  firecrawl.py  playwright.py  qwen_embedding.py  scrapling_adapter.py  stub_firecrawl.py  stub_model.py  types.py
scripts/: cleanup_e2e_data.py  fast_crawl.py  fetch_pdfs.py  run_fast.sh  smoke.sh
tests/: conftest.py  test_cli_import.py  test_health.py  test_package_import.py
(+359 files in other folders)
